--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Schnaser.com
+title: schnaser.com
 description: >- # this means to ignore newlines until "baseurl:"
   Mike Schnaser's personal site.
 baseurl: "" # the subpath of your site, e.g. /blog
