--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  schnaser
+github:
+  is_project_page: false
 
 # Build settings
 markdown: kramdown
