--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: schnaser.com
+title: Mike Schnaser
 email: mike@schnaser.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Mike Schnaser's personal site.
+  Full stack web developer.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.schnaser.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  schnaser
-github:
-  is_project_page: false
+linkedin_profile: mike-schnaser
 
 # Build settings
 markdown: kramdown
