--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Mike Schnaser
 email: mike@schnaser.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Clever subtitle.
+  The Elon Musk of bad ideas.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.schnaser.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  schnaser
