--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Mike Schnaser
 email: mike@schnaser.com
-description: >- # this means to ignore newlines until "baseurl:"
-  The Linus Torvalds of bad code.
+#description: >- # this means to ignore newlines until "baseurl:"
+#  The Linus Torvalds of bad code.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.schnaser.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  schnaser
